Finished Project feat(index.html): Added nesscassary containers to make styling easier feat(styles.css): Fixed previous styling mistakes and made code more readable
styles.css - I did combine all the common styles into one rule with multiple selectors however after review I believe this works better if elements share many of the same styles and if they only have 1 or 2 of the same when it comes to update them you end up having to seperate them out anyway, thats why I removed the rules with multiple selectors

--- a/styles.css
+++ b/styles.css
@@ -1,140 +1,158 @@
 * {
-  padding: 0;
-  margin: 0;
   box-sizing: border-box;
-
+  margin: 0;
+  padding: 0;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 :root {
-  --logging-in-color: rgb(83, 119, 81);
-  --white-background-color: rgb(245, 245, 245);
-}
-
-body,
-form,
-.input-container,
-.input-section {
-  display: flex;
-}
-
-form,
-.input-section {
-  flex-direction: column;
-}
-
-.log-in-text,
-.log-in-button,
-.sign-in-options {
-  font-size: 16px;
-}
-
-.log-in-button,
-.log-in-text {
-  font-weight: 600;
-}
-
-.description,
-.create-account-button {
-  margin-bottom: 32px;
-}
-
-.viper-quote, 
-.description {
-  font-size: 24px;
-  font-weight: bold;
+  --whiteish-color: rgb(245, 245, 245);
+  --greenish-color: rgb(83, 119, 81);
+  --greenish-hover-color: rgb(65, 94, 63);
 }
 
 body {
-  background-color: rgb(245, 245, 245);
   width: 100vw;
   height: 100vh;
+  display: flex;
+  background-color: rgb(245, 245, 245);
 }
 
 .background-container {
-  background-image: url("titanfall-background.jpg");
-  background-size: 100%;
   width: 600px;
   height: 100%;
-
+  flex-shrink: 0;
+  background-image: url("titanfall-background.jpg");
+  background-size: 100%;
   text-align: center;
   color: white;
   font-size: 48px;
   font-weight: 900;
+}
 
-  flex-shrink: 0;
+.background-text {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+  margin-top: 72px;
+  opacity: 70%;
+  background-color: rgb(32, 32, 32);
+}
+
+img {
+  width: 100px;
+  height: 100px;
+}
+
+.game-title {
+  font-family: "BBH Bartle", sans-serif;
+  font-weight: 400;
+  font-size: 32px;
+  color: rgb(238, 255, 0);
 }
 
 .info-container {
-  margin: 96px 256px 64px 0px;
+  margin: 128px 328px 64px 0px;
   padding: 0px 64px;
 }
 
-form {
-  background-color: rgb(250, 250, 250);
-  height: 332px;
+.description {
+  margin-bottom: 32px;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.viper-quote {
+  font-family: "Rubik Glitch", system-ui;
+  font-weight: 400;
+  font-size: 24px;
+}
+
+.input-wrapper {
+  width: 100%;
+  height: 308px;
+  display: flex;
+  flex-direction: column;
   gap: 16px;
-
+  background-color: rgb(250, 250, 250);
   box-shadow: 1px 2px 4px rgb(212, 212, 212);
-  padding: 24px 64px 32px 64px;
-
-  color: rgb(66, 66, 66);
+  color: rgb(61, 61, 61);
 }
 
 h1 {
+  padding: 16px 48px 0px 48px;
   font-size: 24px;
   color: black;
 }
 
-.input-container { 
-  gap: 64px; 
+.input-container {
+  display: flex;
+  gap: 64px;
+  padding: 0px 48px;
+}
+
+.input-section {
+  display: flex;
+  flex-direction: column;
 }
 
 label { 
-  font-weight: lighter; 
+  font-weight: 400; 
 }
 
 input {
   width: 288px;
   height: 32px;
-
   border: 2px solid rgb(223, 223, 223);
   border-radius: 8px;
   padding: 16px 8px;
 }
 
-input[type="password"]:invalid { border: 2px solid rgb(255, 99, 99); }
+input[type="password"]:invalid { 
+  border: 2px solid rgb(255, 99, 99); 
+}
 
 input:focus {
   border: 2px solid rgb(161, 170, 255);
   outline: none;
 }
 
-.sign-in-options { 
-  padding: 48px 64px; 
+.sign-in-options {
+  padding: 48px;
+}
+
+.create-account-button,
+.log-in-button {
+  border: none;
 }
 
 .create-account-button {
-  background-color: var(--logging-in-color);
   width: 232px;
   height: 48px;
-
-  border: none;
-  border-radius: 12px;
-
+  margin-bottom: 32px;
+  background-color: var(--greenish-color);
+  box-shadow: 0px 2px 8px black;
+  border-radius: 16px;
   font-size: 18px;
   font-weight: bolder;
   color: white;
 }
 
-.log-in-button {
-  background-color: var(--white-background-color);
-  border: none;
+.create-account-button:hover {
+  background-color: var(--greenish-hover-color);
+}
 
-  color: var(--logging-in-color);
+.log-in-button {
+  background-color: var(--whiteish-color);
+  font-size: 16px;
+  font-weight: bold;
+  color: var(--greenish-color);
 }
 
 .log-in-button:hover {
+  color: var(--greenish-hover-color);
   text-decoration: underline;
   text-decoration-thickness: 2px;
 }
